service-catalog/service.yaml
# 쿠버네티스 핵심 API 버전을 사용합니다.
apiVersion: v1
# 생성하고자 하는 자원의 종류가 Service임을 선언합니다.
kind: Service
metadata:
  # 이 서비스의 고유 이름입니다. Jenkinsfile이나 다른 서비스에서 이 이름으로 통신할 수 있습니다.
  name: service-catalog-service
  namespace: service-catalog
  # 아래 internal 설정을 적용하지 않으면, AWS가 로드밸런서(ELB)를 생성하며 외부 트래픽을 허용(Ingress)하게 됩니다.
  # 이 백엔드 서비스는 외부에 노출되선 안되며 내부 VPC에서만 접속 가능해야 하므로 내부 LB(Internal LB)로 설정해야 합니다.
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-scheme: internal
    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
spec:
  # AWS의 엘라스틱 로드 밸런서(ELB)를 자동으로 생성하되, annotation으로 VPC 내부 트래픽만 허용합니다.
  type: LoadBalancer
  # 어떤 Deployment(Pod)와 이 네트워크 문을 연결할지 지정합니다.
  # deployment.yaml의 template.metadata.labels.app 값과 일치해야 합니다.
  selector:
    app: service-catalog
  ports:
    # 사용자가 외부 웹 브라우저나 클라이언트에서 접속할 때 사용할 포트입니다.
  - port: 80
    # 외부 트래픽을 컨테이너 내부의 몇 번 포트로 전달할지 지정합니다. 
    # deployment.yaml의 containerPort와 일치해야 합니다.
    targetPort: 8081
    protocol: TCP
