service-catalog/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-catalog-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/load-balancer-name: kkpp-catalog-api
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/security-groups: kkpp-web-edge-catalog-api-alb-sg
    alb.ingress.kubernetes.io/manage-backend-security-group-rules: "true"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/success-codes: "200"
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /health
        pathType: Exact
        backend:
          service:
            name: service-catalog-service
            port:
              number: 80
      - path: /api/v1/products
        pathType: Prefix
        backend:
          service:
            name: service-catalog-service
            port:
              number: 80
      - path: /api/v1/categories
        pathType: Prefix
        backend:
          service:
            name: service-catalog-service
            port:
              number: 80
      - path: /api/v1/cart
        pathType: Prefix
        backend:
          service:
            name: service-catalog-service
            port:
              number: 80
      - path: /api/v1/checkout-requests
        pathType: Prefix
        backend:
          service:
            name: service-catalog-service
            port:
              number: 80
